# Wgpu-experimental-2d-engine

./: Cargo.toml  README.md  client.ron
.github/workflows/: rust.yml
rusty-core/: Cargo.toml
rusty-core/src/: lib.rs
rusty-core/src/audio/: mod.rs
rusty-core/src/graphics/: color.rs  mod.rs  shape.rs  sprite.rs  texture.rs
rusty-core/src/ui/: button.rs  label.rs  mod.rs
rusty-engine/: Cargo.toml
rusty-engine/src/: animation.rs  asset_manager.rs  lib.rs  scene.rs
src/: lib.rs  main.rs  math.rs  player.rs  shader.wgsl
src/graphics/: color.rs  mod.rs
src/ui/: button.rs  mod.rs
