[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.20"
pollster = "0.3.0"
winit = { version = "0.29.14", features = ["rwh_05"] }
rusty-core = { path = "rusty-core" }
rusty-engine = { path = "rusty-engine" }
workspace = { members = ["rusty-core", "rusty_engine"] }
