workspace = { members = ["rusty-core", "rusty-engine"] }
[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.17.0", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.3.0"
rusty-core = { path = "rusty-core" }
rusty-engine = { path = "rusty-engine" }
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
