[package]
name = "rusty-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "add", "into"] }
glam = { version = "0.24.2", features = ["bytemuck"] }
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }
winit = { version = "0.29.7", features = ["rwh_05"] }
wgpu = "0.18.0"

[features]
default = ["graphics", "ui"]
graphics = []
ui = ["graphics"]