[package]
name = "rusty-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytemuck = { version = "1.14.0", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "add", "into"] }
glam = { version = "0.29.0", features = ["bytemuck"] }
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
winit = { version = "0.29.15", features = ["rwh_06"] }
wgpu = "22.1.0"
rodio = { version = "0.17.3", optional = true }

[features]
default = ["audio", "graphics", "ui"]
graphics = []
ui = ["graphics"]
audio = ["rodio"]
