[package]
name = "rusty-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
bytemuck = { version = "1.20.0", features = ["derive"] }
derive_more = { version = "1.0.0", default-features = false, features = ["from", "add", "into"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
winit = { version = "0.29.15", features = ["rwh_06"] }
wgpu = "23.0.1"
rodio = { version = "0.20.1", optional = true }

[features]
default = ["audio", "graphics", "ui"]
graphics = []
ui = ["graphics"]
audio = ["rodio"]
